--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html ng-app="formTest">
+<html ng-app="nestedFormTest">
     <head>
         <meta charset="utf-8">
         <title>Form testing</title>
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="main.js"></script>
     </head>
-    <body>
-        <form></form>
-
-        <form-component></form-component>
+    <body ng-controller="MainCtrl as main">
+        <form name="main.rootForm">
+            <form-component ng-model="main.range"></form-component>
+            <button type="submit">Submit</button>
+        </form>
     </body>
 </html>
