removed important styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Nested form validation</h1>
 
         <p>When this form is invalid, it will have a red border</p>
-        <form name="main.rootForm" ng-submit="main.onSubmit()" id="main-form">
+        <form name="main.rootForm" ng-submit="main.onSubmit()" class="main-form">
 
             <p>First, a required input using ng-required="true" in the root form</p>
             <input name="requiredText" ng-model="main.requiredText" ng-required="true">
